# TurnAround

./: .gitignore  Cargo.toml  README.md  angular.json  index.html  package-lock.json  package.json
.angular/cache/21.1.4/editgit/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
app/: app.ts
otio-sys/: Cargo.toml  build.rs  wrapper.h
otio-sys/src/: lib.rs
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  error.rs  lib.rs  main.rs  registry.rs
src-tauri/src/commands/: mod.rs  project.rs  registry.rs  timeline.rs  vcs.rs  watcher.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/hasher/: mod.rs
src-tauri/src/timeline/: diff.rs  mod.rs  parser.rs
src-tauri/src/vcs/: branch.rs  commit.rs  history.rs  mod.rs  object_store.rs
src-tauri/src/watcher/: filter.rs  mod.rs  resolve.rs
src/app/: app.routes.ts  app.ts
src/app/components/commit-dialog/: commit-dialog.component.html  commit-dialog.component.scss  commit-dialog.component.ts
src/app/components/file-tree/: file-tree.component.html  file-tree.component.scss  file-tree.component.ts
src/app/components/ghost-sidebar/: ghost-sidebar.component.html  ghost-sidebar.component.scss  (+1 more)
src/app/models/: commit.model.ts  error.model.ts  project.model.ts  timeline.model.ts
src/app/services/: project.service.ts  registry.service.ts  tauri.service.ts  timeline.service.ts  vcs.service.ts  watcher.service.ts
src/styles/: _variables.scss
(+18 files in other folders)
