[package]
name = "turnaround"
version = "0.1.0"
edition = "2021"
description = "A specialized version control system for video production"
license = "MIT"

[lib]
name = "turnaround_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "7"
notify-debouncer-mini = "0.5"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
